fix gutter overlap issue in settings panel

--- a/src/app.css
+++ b/src/app.css
@@ -1378,6 +1378,7 @@ input[type=number]::-webkit-outer-spin-button {
 	display: flex;
 	flex-direction: column;
 	overflow-y: auto;
+	padding-bottom: 20px;
 }
 #config.toastgap {
 	margin-top: 20px;
